# celaris-src

./: CMakeLists.txt  README.md
src/: bindings.d.ts
src-celaris/: CMakeLists.txt  bindings.cc  celaris.cc  config.ini  main.cc  main.cpp
src-celaris/includes/: bindings.h  celaris.h  process_path.h  trim.h
src-celaris/resources/windows/: resources.cmake  resources.rc
src-celaris/test/: CMakeLists.txt  test.cc
